apps/skein_compiler/test/skein/conformance/negative/test_block_missing_unwrap.skein
-- expect: E0020
-- #253: full inference now covers test bodies, so a missing `!` on an effect
-- inside a test block is a compile error.
module TestBlockMissingUnwrap {
  capability model("anthropic", "claude-opus-4-8")

  test "uses chat without unwrapping" {
    let r = llm.chat("claude-opus-4-8", "sys", "hi")
    assert String.length(r) > 0
  }
}
